fixign the upsell form elements alignments

--- a/src/components/UpsellActionButton/style.css
+++ b/src/components/UpsellActionButton/style.css
@@ -11,7 +11,6 @@
     min-width: 200px;
     min-height: 36px;
     text-align: center;
-    margin-bottom:20px; 
     border-radius: 3px;
     text-decoration: none;
     padding: 8px 15px;
